Extending getting started javafx and fxgl